plugin/src/test/resources/annotator/perl/unreachableCode/callDieMid.code
foo "First", die("something"), "<error descr="Unreachable code">Last</error>";